# server/db/sqlc/models.go
@@ -68,4 +68,5 @@ type User struct {
 	Role         string      `json:"role"`
 	CreatedAt    time.Time   `json:"created_at"`
 	UpdatedAt    time.Time   `json:"updated_at"`
+	IsSuspended  bool        `json:"is_suspended"`
 }
