# server/db/sqlc/users.sql.go
@@ -21,7 +21,7 @@ INSERT INTO users (
 ) VALUES (
     $1, $2, $3, $4
 )
-RETURNING id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at
+RETURNING id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at, is_suspended
 `
 
 type CreateUserParams struct {
@@ -49,12 +49,13 @@ func (q *Queries) CreateUser(ctx context.Context, arg CreateUserParams) (User, e
 		&i.Role,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.IsSuspended,
 	)
 	return i, err
 }
 
 const getUserByEmail = `-- name: GetUserByEmail :one
-SELECT id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at FROM users
+SELECT id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at, is_suspended FROM users
 WHERE email = $1 LIMIT 1
 `
 
@@ -71,12 +72,13 @@ func (q *Queries) GetUserByEmail(ctx context.Context, email string) (User, error
 		&i.Role,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.IsSuspended,
 	)
 	return i, err
 }
 
 const getUserByGoogleID = `-- name: GetUserByGoogleID :one
-SELECT id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at FROM users
+SELECT id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at, is_suspended FROM users
 WHERE google_id = $1 LIMIT 1
 `
 
@@ -93,12 +95,13 @@ func (q *Queries) GetUserByGoogleID(ctx context.Context, googleID pgtype.Text) (
 		&i.Role,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.IsSuspended,
 	)
 	return i, err
 }
 
 const getUserByID = `-- name: GetUserByID :one
-SELECT id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at FROM users
+SELECT id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at, is_suspended FROM users
 WHERE id = $1 LIMIT 1
 `
 
@@ -115,6 +118,7 @@ func (q *Queries) GetUserByID(ctx context.Context, id uuid.UUID) (User, error) {
 		&i.Role,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.IsSuspended,
 	)
 	return i, err
 }
@@ -127,7 +131,7 @@ SET
     avatar_url = COALESCE($4, avatar_url),
     updated_at = NOW()
 WHERE id = $1
-RETURNING id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at
+RETURNING id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at, is_suspended
 `
 
 type UpdateUserParams struct {
@@ -155,6 +159,7 @@ func (q *Queries) UpdateUser(ctx context.Context, arg UpdateUserParams) (User, e
 		&i.Role,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.IsSuspended,
 	)
 	return i, err
 }
@@ -174,7 +179,7 @@ ON CONFLICT (email) DO UPDATE SET
     avatar_url = EXCLUDED.avatar_url,
     full_name = EXCLUDED.full_name,
     updated_at = NOW()
-RETURNING id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at
+RETURNING id, email, password_hash, google_id, avatar_url, full_name, role, created_at, updated_at, is_suspended
 `
 
 type UpsertGoogleUserParams struct {
@@ -204,6 +209,7 @@ func (q *Queries) UpsertGoogleUser(ctx context.Context, arg UpsertGoogleUserPara
 		&i.Role,
 		&i.CreatedAt,
 		&i.UpdatedAt,
+		&i.IsSuspended,
 	)
 	return i, err
 }
